@@ -16,6 +16,11 @@ module Facebooker
       json = @session.post('facebook.admin.getAppProperties', :properties => properties.to_json)
       array_of_hashes = JSON.parse(json)
       @properties = ApplicationProperties.from_array_of_hashes(array_of_hashes)
+    end
+  
+    # Integration points include :notifications_per_day
+    def get_allocation(integration_point)
+      @session.post('facebook.admin.getAllocation', :integration_point_name => integration_point.to_s).to_i
     end    
   end
 end
